cabal-version:      3.14
name:               org-from-code
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
-- license-file:
author:             Jeffrey Benjamin Brown
maintainer:         jeffbrown.the@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable org-from-code
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Elisp,
      Util,
      Rust
    -- other-extensions:
    build-depends:    base ^>=4.20.1.0,
                      directory,
                      filepath,
                      vector
    hs-source-dirs:   app
    default-language: GHC2024
